--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </style>
 </head>
 
-<body ng-app='clicklab' ng-controller="clicklabController as clCtrl">>
+<body ng-app='clicklab' ng-controller="clicklabController as clCtrl">
     <header layout="row" style="display:flex;justify-content: space-between;">
         <div class="logo">
             <div flex="20"></div>
